Nav Bar placeholder.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,1 +1,10 @@
 @import "compass_twitter_bootstrap";
+
+/******************
+*** NAVBAR
+*******************/
+
+.navbar-inner {
+  width: 940px;
+  margin: 0 auto;
+}
