Added place holders for spot types.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,8 +34,7 @@ $cf-herd: #dc6e6e;
 // page width/centering 
 @mixin page-container {
   margin: 0 auto;
-  padding: 0 20px;
-  width: 900px;
+  width: 940px;
 }
 
 
@@ -79,5 +78,41 @@ $cf-herd: #dc6e6e;
     display: inline;
     padding: 40px;
   }
+}
 
+/******************
+*** MAIN PAGE 
+*******************/
+
+#main-page {
+  @include page-container;
+
+  .spot-types {
+    @include page-container;
+    text-align: center;
+
+    .arrow {
+      background: black;
+      height: 20px;
+      width: 20px;
+    }
+
+    .spot {
+      padding: 20px;
+    }
+
+    div {
+      display: inline-block;
+    }
+
+    h2 {
+      display: inline-block;
+    }
+
+    .icon {
+      background: black;
+      height: 60px;
+      width: 60px;
+    }
+  }
 }
