--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,42 @@
-<div class="hero-unit">
-  <h1>'Allo, 'Allo!</h1>
-  <p>You now have</p>
-  <ul>
-      <li ng-repeat="thing in awesomeThings">{{thing}}</li>
-  </ul>
-  <p>installed.</p>
-  <h3>Enjoy coding! - Yeoman</h3>
+<div id="main-page">
+
+  <div class="spot-types">
+    <div class="tag-line">
+      <div class="side arrow">
+      </div>
+      <div class="center">
+        <h1>Three Types of Spots</h1>
+        <div class="center arrow">
+        </div>
+      </div>
+      <div class="side arrow">
+      </div>
+    </div>
+    <div class="spots">
+      <div class="spot food">
+        <div class="icon">
+        </div>
+        <h2>Food</h2>
+        <h4>Get a table<br>and a good meal</h4>
+      </div>
+      <div class="spot study">
+        <div class="icon">
+        </div>
+        <h2>Study</h2>
+        <h4>Study or work<br>without distractions</h4>
+      </div>
+      <div class="spot social">
+        <div class="icon">
+        </div>
+        <h2>Social</h2>
+        <h4>Have a drink<br>and hear your friends</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="nearby">
+  </div>
+
+  <div class="visualize">
+  </div>
 </div>
