--- a/app/views/main.html
+++ b/app/views/main.html
@@ -32,9 +32,14 @@
         <h4>Have a drink<br>and hear your friends</h4>
       </div>
     </div>
+    <hr>
   </div>
 
   <div class="nearby">
+    <form class="form-horizontal">
+      <h3>Find a place near you:</h3>
+      <input type="text" class="form-control" placeholder="City or Zip">
+    </form>
   </div>
 
   <div class="visualize">
