--- a/app/views/main.html
+++ b/app/views/main.html
@@ -38,6 +38,12 @@
   <div class="nearby">
     <form class="form-horizontal">
       <h3>Find a place near you:</h3>
+      <select class="type">
+        <option>Food</option>
+        <option>Study</option>
+        <option>Social</option>
+        <option>All</option>
+      </select>
       <input type="text" class="form-control" placeholder="City or Zip">
     </form>
     <hr>
