Added search button for nearby location.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -128,6 +128,10 @@ $cf-herd: #dc6e6e;
       text-align: center;
       width: 150px;
     }
+
+    button {
+      margin: -10px 0 0 10px;
+    }
   }
 }
 
