--- a/app/views/main.html
+++ b/app/views/main.html
@@ -45,6 +45,7 @@
         <option>All</option>
       </select>
       <input type="text" class="form-control" placeholder="City or Zip">
+      <button class="btn">Search</button>
     </form>
     <hr>
   </div>
