--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -1,1 +1,12 @@
-<p>This is the listings view.</p>
+<div classs="title-bar">
+  <div class="icon">
+  </div>
+  <h2>Food</h2>
+
+</div>
+
+<div class="listings">
+</div>
+
+<div class="map">
+</div>
