Refactor icon to type-icon and made global in css.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -37,6 +37,15 @@ $cf-herd: #dc6e6e;
   width: 940px;
 }
 
+/******************
+*** Global 
+*******************/
+.type-icon {
+      background: black;
+      display: inline-block;
+      height: 60px;
+      width: 60px;
+    }
 
 /******************
 *** NAVBAR
@@ -103,12 +112,6 @@ $cf-herd: #dc6e6e;
 
     h2 {
       display: inline-block;
-    }
-
-    .icon {
-      background: black;
-      height: 60px;
-      width: 60px;
     }
   }
 
