--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,19 +14,19 @@
     </div>
     <div class="spots">
       <div class="spot food">
-        <div class="icon">
+        <div class="type-icon">
         </div>
         <h2>Food</h2>
         <h4>Get a table<br>and a good meal</h4>
       </div>
       <div class="spot study">
-        <div class="icon">
+        <div class="type-icon">
         </div>
         <h2>Study</h2>
         <h4>Study or work<br>without distractions</h4>
       </div>
       <div class="spot social">
-        <div class="icon">
+        <div class="type-icon">
         </div>
         <h2>Social</h2>
         <h4>Have a drink<br>and hear your friends</h4>
