--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -1,12 +1,33 @@
-<div classs="title-bar">
-  <div class="type-icon">
+<div id="listings-page">
+  <div class="title-bar">
+    <div class="main-col span8">
+      <div class="type-icon">
+      </div>
+      <h2>Study</h2>
+      <h3>Palo Alto, CA 94301</h3>
+      <form class="form-horizontal">
+        <h4>New Spot: </h4>
+        <select class="type">
+          <option>Food</option>
+          <option>Study</option>
+          <option>Social</option>
+          <option>All</option>
+        </select>
+        <input type="text" class="form-control" placeholder="City or Zip">
+        <button class="btn">Search</button>
+      </form>
+      <button class="btn">Add Spot</button>
+    </div>
+    <div class="side-col span4">
+      <div class="ad">
+        Ad Holder
+      </div>
+    </div>
   </div>
-  <h2>Food</h2>
 
-</div>
+  <div class="listings">
+  </div>
 
-<div class="listings">
-</div>
-
-<div class="map">
+  <div class="map">
+  </div>
 </div>
