Added clearfix to title bar.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -189,6 +189,11 @@ $cf-herd: #dc6e6e;
       margin: -10px 0 0 10px;
     }
 
+    .add-spot {
+      float: right;
+      margin: 0 20px 0 0;
+    }
+
   }
 }
 
