--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -1,5 +1,5 @@
 <div id="listings-page">
-  <div class="title-bar">
+  <div class="title-bar clearfix">
     <div class="main-col span8">
       <div class="type-icon">
       </div>
@@ -16,7 +16,8 @@
         <input type="text" class="form-control" placeholder="City or Zip">
         <button class="btn">Search</button>
       </form>
-      <button class="btn">Add Spot</button>
+      <button class="btn add-spot">Add Spot</button>
+      <h6>1-10 of 100</h6>
     </div>
     <div class="side-col span4">
       <div class="ad">
@@ -24,8 +25,17 @@
       </div>
     </div>
   </div>
-
+  <hr>
   <div class="listings">
+    <div class="listing">
+      <h2 class="rank">1</h2>
+      <h4 class="title">Philz Coffee</h4>
+      <h5 class="address">101 Forest Ave. Palo Alto</h5>
+      <div class="stars"></div>
+      <div class="review"></div>
+      <div class="crowd"></div>
+      <div class="watchers"></div>
+    </div>
   </div>
 
   <div class="map">
