--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -28,13 +28,33 @@
   <hr>
   <div class="listings">
     <div class="listing">
-      <h2 class="rank">1</h2>
-      <h4 class="title">Philz Coffee</h4>
-      <h5 class="address">101 Forest Ave. Palo Alto</h5>
-      <div class="stars"></div>
-      <div class="review"></div>
-      <div class="crowd"></div>
-      <div class="watchers"></div>
+      <div class="rank">
+        <h4>1.</h4>
+      </div>
+      <div class="info"> 
+        <h4 class="title">Philz Coffee</h4>
+        <h5 class="address">101 Forest Ave. Palo Alto</h5>
+        <div class="rating">
+          <div class="stars">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon-half.png">
+            <img src="images/star-icon-empty.png">
+          </div>
+          <div class="review-count">75 Reviews</div>
+        </div>
+        <div class="crowd-rank">
+          <div class="crowd-bar">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+          </div>
+          <div class="watchers">549 Watchers</div>
+        </div>
+      </div>
     </div>
   </div>
 
