--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -26,7 +26,8 @@
     </div>
   </div>
   <hr>
-  <div class="listings">
+  <div class="listings span8">
+
     <div class="listing">
       <div class="rank">
         <h4>1.</h4>
@@ -55,9 +56,74 @@
           <div class="watchers">549 Watchers</div>
         </div>
       </div>
+      <hr>
     </div>
+
+    <div class="listing">
+      <div class="rank">
+        <h4>2.</h4>
+      </div>
+      <div class="info"> 
+        <h4 class="title">Peet's Coffee & Tea</h4>
+        <h5 class="address">448 University Ave. Palo Alto</h5>
+        <div class="rating">
+          <div class="stars">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon-empty.png">
+            <img src="images/star-icon-empty.png">
+          </div>
+          <div class="review-count">75 Reviews</div>
+        </div>
+        <div class="crowd-rank">
+          <div class="crowd-bar">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+          </div>
+          <div class="watchers">549 Watchers</div>
+        </div>
+      </div>
+      <hr>
+    </div>
+
+    <div class="listing">
+      <div class="rank">
+        <h4>3.</h4>
+      </div>
+      <div class="info"> 
+        <h4 class="title">Coupa Cafe</h4>
+        <h5 class="address">638 Ramona St. Palo Alto</h5>
+        <div class="rating">
+          <div class="stars">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon-half.png">
+            <img src="images/star-icon-empty.png">
+          </div>
+          <div class="review-count">75 Reviews</div>
+        </div>
+        <div class="crowd-rank">
+          <div class="crowd-bar">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+          </div>
+          <div class="watchers">549 Watchers</div>
+        </div>
+      </div>
+      <hr>
+    </div>
+
   </div>
 
-  <div class="map">
+  <div class="side-col span4">
+    <div class="map">MAP</div>
   </div>
 </div>
