Added more results placeholder.  Listings sketch done.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -238,6 +238,12 @@ $cf-herd: #dc6e6e;
     }
   }
 
+  .more {
+    float: right;
+    margin: -20px 0 0 0;
+    padding: 0 10px 0 0;
+  }
+
   .map {
     background: gray;
     height: 150px;
