--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -121,6 +121,9 @@
       <hr>
     </div>
 
+    <div class="more">
+      <a>More Results</a>
+    </div>
   </div>
 
   <div class="side-col span4">
