--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -1,1 +1,41 @@
-<p>This is the spot view.</p>
+<div id="spot-page">
+
+  <div class="title-bar clearfix">
+    <div class="main-col span8">
+      <h2>Philz Coffee</h2>
+      <div class="rating">
+        <div class="stars">
+          <img src="images/star-icon.png">
+          <img src="images/star-icon.png">
+          <img src="images/star-icon.png">
+          <img src="images/star-icon-half.png">
+          <img src="images/star-icon-empty.png">
+        </div>
+        <div class="review-count">75 Reviews</div>
+      </div>
+      <div class="spot-types">
+        <div class="type">
+          <div class="type-icon"></div>
+          <div>Study</div>
+        </div>
+        <div class="type">
+          <div class="type-icon"></div>
+          <div>Food</div>
+        </div>
+        <div class="type">
+          <div class="type-icon"></div>
+          <div>Social</div>
+        </div>
+      </div>
+    </div>
+    <div class="side-col span4">
+      <div class="map">
+        Map
+      </div>
+      <h4>101 Forest Ave.</h4>
+      <h4>Palo Alto, CA 94301</h4>
+    </div>
+  </div>
+  <hr>
+
+</div>
