Added crowd factor placeholder to spot page.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -281,6 +281,8 @@ $cf-herd: #dc6e6e;
 *******************/
 .crowd-factor {
 
+  text-align: center;
+
   h2, h4 {
     display: inline-block;
     padding: 0 20px; 
