Add placeholders for reviews on spot page.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -274,6 +274,19 @@ $cf-herd: #dc6e6e;
     padding: 10px;
   }
 
+  .reviews {
+    margin: 30px 0 0 0;
+  }
+
+  .review-nums {
+    margin-bottom: -10px;
+  }
+
+  .add-review {
+    float: right;
+    margin-top: -25px;
+  }
+
 }
 
 /******************
