--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -314,4 +314,81 @@
     </div>
   </div>
 
+  <div class="reviews">
+    <h6 class="review-nums">1-10 of 100</h6>
+    <button class="btn add-review">Add Review</button>
+    <hr>
+    <div class="listings span8">
+
+    <div class="listing">
+      <div class="rank">
+        <h4>1.</h4>
+      </div>
+      <div class="info"> 
+        <h4 class="title">Steve S.</h4>
+        <div class="rating">
+          <div class="stars">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon-half.png">
+            <img src="images/star-icon-empty.png">
+          </div>
+        </div>
+      </div>
+      <p>Tesora = King of Coffee</p>
+      <hr>
+    </div>
+
+    <div class="listing">
+      <div class="rank">
+        <h4>2.</h4>
+      </div>
+      <div class="info"> 
+        <h4 class="title">Jack O.</h4>
+        <div class="rating">
+          <div class="stars">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon-half.png">
+            <img src="images/star-icon-empty.png">
+          </div>
+        </div>
+      </div>
+      <p>The only coffee shop were ordering a black coffee is seen as a faux paus.</p>
+      <hr>
+    </div>
+
+    <div class="listing">
+      <div class="rank">
+        <h4>3.</h4>
+      </div>
+      <div class="info"> 
+        <h4 class="title">Whiny B.</h4>
+        <div class="rating">
+          <div class="stars">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon.png">
+            <img src="images/star-icon-half.png">
+            <img src="images/star-icon-empty.png">
+          </div>
+        </div>
+      </div>
+      <p>Worth the hyp.  Mint leaves in my mint coffe make me happy.  Afterwards I get a coffee headache.</p>
+      <hr>
+    </div>
+
+    <div class="more">
+      <a>More Results</a>
+    </div>
+  </div>
+
+  <div class="side-col span4">
+    <div class="map">MAP</div>
+  </div>
+
+  </div>
+
 </div>
