--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -386,7 +386,24 @@
   </div>
 
   <div class="side-col span4">
-    <div class="map">MAP</div>
+    <div class="find-nearby">
+      <h3>Find Nearby:</h3>
+      <div class="nearby-type">
+        <div class="type-icon"></div>
+        <h3>Food</h3>
+      </div>
+      <div class="nearby-type">
+        <div class="type-icon"></div>
+        <h3>Study</h3>
+      </div>
+      <div class="nearby-type">
+        <div class="type-icon"></div>
+        <h3>Social</h3>
+      </div>
+    </div>
+    <div class="ad">
+      Ad Holder
+    </div>
   </div>
 
   </div>
