--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -1,1 +1,55 @@
-<p>This is the signup view.</p>
+<div id="sign-up">
+
+  <div class="b4cm-signup span5">
+    <div class="logo"></div>
+    <h4>Signup with Before Critical Mass</h4> 
+    <form class="form-horizontal">
+      <div class="control-group">
+        <label class="control-label" for="inputEmail">Email</label>
+        <div class="controls">
+          <input type="text" id="inputEmail" placeholder="Email">
+        </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="inputPassword">Password</label>
+        <div class="controls">
+          <input type="password" id="inputPassword" placeholder="Password">
+        </div>
+      </div>
+      <div class="control-group">
+        <div class="controls">
+          <button type="submit" class="btn">Sign Up</button>
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <div class="span2">
+    <h4>OR</h4>
+  </div>
+
+  <div class="3rd-party-signup span5">
+    <h4>Signup using another account</h4>
+    <div>
+      <div class="login-method">
+        <div class="icon"></div>
+        <h5>Facebook</h5>
+      </div>
+      <div class="login-method">
+        <div class="icon"></div>
+        <h5>Twitter</h5>
+      </div>
+    </div>
+    <div>
+      <div class="login-method">
+        <div class="icon"></div>
+        <h5>Github</h5>
+      </div>
+      <div class="login-method">
+        <div class="icon"></div>
+        <h5>Persona</h5>
+      </div>
+    </div>  
+  </div>
+
+</div>
