Added sign in placeholders.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -315,6 +315,17 @@ $cf-herd: #dc6e6e;
 }
 
 /******************
+*** Sign In Page 
+*******************/
+#sign-in {
+  
+  .login-method {
+    display: inline-block;
+  }
+}
+
+
+/******************
 *** Crowd Factor 
 *******************/
 .crowd-factor {
