--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -1,1 +1,42 @@
-<p>This is the signin view.</p>
+<div id="sign-in">
+
+  <div class="b4cm-signin">
+    <div class="logo"></div>
+    <h4>Signin with Before Critical Mass</h4> 
+    <form class="form-inline">
+      <input type="text" class="input-small" placeholder="Email">
+      <input type="password" class="input-small" placeholder="Password">
+      <label class="checkbox">
+        <input type="checkbox"> Remember me
+      </label>
+      <button type="submit" class="btn">Sign in</button>
+    </form>
+  </div>
+
+  <div>
+    <h4>OR</h4>
+  </div>
+
+  <div class="3rd-party-signin">
+    <h4>Signin using another account</h4>
+    <div>
+      <div class="login-method">
+        <div class="icon"></div>
+        <h5>Facebook</h5>
+      </div>
+      <div class="login-method">
+        <div class="icon"></div>
+        <h5>Twitter</h5>
+      </div>
+      <div class="login-method">
+        <div class="icon"></div>
+        <h5>Github</h5>
+      </div>
+      <div class="login-method">
+        <div class="icon"></div>
+        <h5>Persona</h5>
+      </div>
+    </div>  
+  </div>
+
+</div>
