Add link for addSpot.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -16,7 +16,9 @@
         <input type="text" class="form-control" placeholder="City or Zip">
         <button class="btn">Search</button>
       </form>
-      <button class="btn add-spot">Add Spot</button>
+      <a  ng-href="#/addSpot">
+        <button class="btn add-spot">Add Spot</button>
+      </a>
       <h6>1-10 of 100</h6>
     </div>
     <div class="side-col span4">
