--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -30,7 +30,7 @@
   <hr>
   <div class="listings span8">
 
-    <div class="listing">
+    <div class="listing" ng-click="findSpot()">
       <div class="rank">
         <h4>1.</h4>
       </div>
@@ -61,7 +61,7 @@
       <hr>
     </div>
 
-    <div class="listing">
+    <div class="listing" ng-click="findSpot()">
       <div class="rank">
         <h4>2.</h4>
       </div>
@@ -92,7 +92,7 @@
       <hr>
     </div>
 
-    <div class="listing">
+    <div class="listing" ng-click="findSpot()">
       <div class="rank">
         <h4>3.</h4>
       </div>
