Add links for addReview and addWatch.

--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -41,7 +41,9 @@
   <div class="crowd-factor">
     <h2>Crowd Factor: <span class="current-time">Tuesday, 5pm</span></h2>
     <h4>73 Watchers</h4>
-    <button type="button" class="btn">Add Herd Watch</button>
+    <a ng-href="#/addWatch">
+      <button type="button" class="btn">Add Herd Watch</button>
+    </a>
     <div class="crowd-visuals">
       <div class="timeslot">
         <h5>Morning</h5>
@@ -316,7 +318,9 @@
 
   <div class="reviews">
     <h6 class="review-nums">1-10 of 100</h6>
-    <button class="btn add-review">Add Review</button>
+    <a ng-href="#/addReview">
+      <button class="btn add-review">Add Review</button>
+    </a>
     <hr>
     <div class="listings span8">
 
