--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -1,1 +1,42 @@
-<p>This is the addSpot view.</p>
+<div id="add-spot-page">
+  <h3>Add a spot:</h3>
+
+  <form class="form-horizontal">
+    <div class="control-group">
+      <label class="control-label" for="inputName">Name</label>
+      <div class="controls">
+        <input type="text" id="inputName" placeholder="Name">
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="inputAddress">Address</label>
+      <div class="controls">
+        <input type="text" id="inputAddress" placeholder="Address">
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="inputCity">City</label>
+      <div class="controls">
+        <input type="text" id="inputCity" placeholder="City">
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="inputZip">Zip</label>
+      <div class="controls">
+        <input type="text" id="inputZip" placeholder="Zip">
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="inputState">State</label>
+      <div class="controls">
+        <input type="text" id="inputState" placeholder="State">
+      </div>
+    </div>
+
+    <div class="control-group">
+      <div class="controls">
+        <button type="submit" class="btn">Sign in</button>
+      </div>
+    </div>
+  </form>
+</div>
