--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -34,8 +34,140 @@
     </div>
 
     <div class="control-group">
+      <label class="control-label">Type of Spot</label>
       <div class="controls">
-        <button type="submit" class="btn">Sign in</button>
+        <label class="checkbox inline">
+          <input type="checkbox" id="inlineCheckbox1" value="food">Food
+        </label>
+        <label class="checkbox inline">
+          <input type="checkbox" id="inlineCheckbox2" value="study">Study
+        </label>
+        <label class="checkbox inline">
+          <input type="checkbox" id="inlineCheckbox3" value="social">Social
+        </label>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="inputHours">Hours</label>
+      <div class="controls">
+        <select>
+          <option>Mon</option>
+          <option>Tue</option>
+          <option>Wed</option>
+          <option>Thr</option>
+          <option>Fri</option>
+          <option>Sat</option>
+          <option>Sun</option>
+        </select>
+        <select>
+          <option>12:00 am</option>
+          <option>12:30 am</option>
+          <option>1:00 am</option>
+          <option>1:30 am</option>
+          <option>2:00 am</option>
+          <option>2:30 am</option>
+          <option>3:00 am</option>
+          <option>3:30 am</option>
+          <option>4:00 am</option>
+          <option>4:30 am</option>
+          <option>5:00 am</option>
+          <option>5:30 am</option>
+          <option>6:00 am</option>
+          <option>6:30 am</option>
+          <option>7:00 am</option>
+          <option>7:30 am</option>
+          <option>8:00 am</option>
+          <option>8:30 am</option>
+          <option>9:00 am</option>
+          <option>9:30 am</option>
+          <option>10:00 pm</option>
+          <option>10:30 pm</option>
+          <option>11:00 pm</option>
+          <option>11:30 pm</option>
+          <option>12:00 pm</option>
+          <option>12:30 pm</option>
+          <option>1:00 pm</option>
+          <option>1:30 pm</option>
+          <option>2:00 pm</option>
+          <option>2:30 pm</option>
+          <option>3:00 pm</option>
+          <option>3:30 pm</option>
+          <option>4:00 pm</option>
+          <option>4:30 pm</option>
+          <option>5:00 pm</option>
+          <option>5:30 pm</option>
+          <option>6:00 pm</option>
+          <option>6:30 pm</option>
+          <option>7:00 pm</option>
+          <option>7:30 pm</option>
+          <option>8:00 pm</option>
+          <option>8:30 pm</option>
+          <option>9:00 pm</option>
+          <option>9:30 pm</option>
+          <option>10:00 pm</option>
+          <option>10:30 pm</option>
+          <option>11:00 pm</option>
+          <option>11:30 pm</option>
+        </select>
+        <select>
+          <option>12:00 am</option>
+          <option>12:30 am</option>
+          <option>1:00 am</option>
+          <option>1:30 am</option>
+          <option>2:00 am</option>
+          <option>2:30 am</option>
+          <option>3:00 am</option>
+          <option>3:30 am</option>
+          <option>4:00 am</option>
+          <option>4:30 am</option>
+          <option>5:00 am</option>
+          <option>5:30 am</option>
+          <option>6:00 am</option>
+          <option>6:30 am</option>
+          <option>7:00 am</option>
+          <option>7:30 am</option>
+          <option>8:00 am</option>
+          <option>8:30 am</option>
+          <option>9:00 am</option>
+          <option>9:30 am</option>
+          <option>10:00 pm</option>
+          <option>10:30 pm</option>
+          <option>11:00 pm</option>
+          <option>11:30 pm</option>
+          <option>12:00 pm</option>
+          <option>12:30 pm</option>
+          <option>1:00 pm</option>
+          <option>1:30 pm</option>
+          <option>2:00 pm</option>
+          <option>2:30 pm</option>
+          <option>3:00 pm</option>
+          <option>3:30 pm</option>
+          <option>4:00 pm</option>
+          <option>4:30 pm</option>
+          <option>5:00 pm</option>
+          <option>5:30 pm</option>
+          <option>6:00 pm</option>
+          <option>6:30 pm</option>
+          <option>7:00 pm</option>
+          <option>7:30 pm</option>
+          <option>8:00 pm</option>
+          <option>8:30 pm</option>
+          <option>9:00 pm</option>
+          <option>9:30 pm</option>
+          <option>10:00 pm</option>
+          <option>10:30 pm</option>
+          <option>11:00 pm</option>
+          <option>11:30 pm</option>
+        </select>
+        <button class="btn">Add Hours</button>        
+      </div>
+    </div>
+
+
+    <div class="control-group">
+      <div class="controls">
+        <button type="submit" class="btn">Add Spot</button>
       </div>
     </div>
   </form>
