--- a/app/views/addReview.html
+++ b/app/views/addReview.html
@@ -1,1 +1,39 @@
-<p>This is the addReview view.</p>
+<div id="add-review-page">
+  <h3>Add a Review:</h3>
+
+  <h4>Philz Coffee</h4>
+  <h5>448 Forest Ave, Palo Alto</h5>
+  <form class="form-horizontal">
+    <div class="control-group">
+      <label class="control-label" for="inputWriteup">Write up</label>
+      <div class="controls">
+        <textarea id="inputWriteup" placeholder="Your review"></textarea>
+      </div>
+    </div>
+    
+    <div class="control-group">
+      <label class="control-label" for="inputStars">Stars</label>
+      <div class="controls">
+        <select id="stars">
+          <option>0</option>
+          <option>1/2</option>
+          <option>1</option>
+          <option>1 1/2</option>
+          <option>2</option>
+          <option>2 1/2</option>
+          <option>3</option>
+          <option>3 1/2</option>
+          <option>4</option>
+          <option>4 1/2</option>
+          <option>5</option>
+        </select>     
+      </div>
+    </div>
+
+    <div class="control-group">
+      <div class="controls">
+        <button type="submit" class="btn">Add Review</button>
+      </div>
+    </div>
+  </form>
+</div>
