Add placeholders for add herd watch page.

--- a/app/views/addWatch.html
+++ b/app/views/addWatch.html
@@ -1,1 +1,93 @@
-<p>This is the addWatch view.</p>
+<div id="add-watch-page">
+  <h3>Add a Herd Watch:</h3>
+
+  <h4>Philz Coffee</h4>
+  <h5>448 Forest Ave, Palo Alto</h5>
+
+  <form class="form-horizontal">
+    
+    <div class="control-group">
+      <label class="control-label">Crowd Factor</label>
+      <div class="controls">
+        <label class="checkbox inline">
+          <input type="checkbox" id="inlineCheckbox1" value="empty">Empty
+        </label>
+        <label class="checkbox inline">
+          <input type="checkbox" id="inlineCheckbox2" value="few">Few
+        </label>
+        <label class="checkbox inline">
+          <input type="checkbox" id="inlineCheckbox3" value="average">Average
+        </label>
+        <label class="checkbox inline">
+          <input type="checkbox" id="inlineCheckbox2" value="crowded">Crowded
+        </label>
+        <label class="checkbox inline">
+          <input type="checkbox" id="inlineCheckbox3" value="herd">Herd
+        </label>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="inputHours">Time</label>
+      <div class="controls">
+        -
+        <select>
+          <option>15</option>
+          <option>30</option>
+          <option>45</option>
+          <option>1:00</option>
+          <option>1:15</option>
+          <option>1:30</option>
+          <option>1:45</option>
+          <option>2:00</option>
+          <option>2:15</option>
+          <option>2:30</option>
+          <option>2:45</option>
+          <option>3:00</option>
+          <option>3:15</option>
+          <option>3:30</option>
+          <option>3:45</option>
+          <option>4:00</option>
+          <option>4:15</option>
+          <option>4:30</option>
+          <option>4:45</option>
+          <option>5:00</option>
+        </select>
+        Mins
+        <input type="text" id="inlineCheckbox3" value="2:45">
+        + 
+        <select>
+          <option>15</option>
+          <option>30</option>
+          <option>45</option>
+          <option>1:00</option>
+          <option>1:15</option>
+          <option>1:30</option>
+          <option>1:45</option>
+          <option>2:00</option>
+          <option>2:15</option>
+          <option>2:30</option>
+          <option>2:45</option>
+          <option>3:00</option>
+          <option>3:15</option>
+          <option>3:30</option>
+          <option>3:45</option>
+          <option>4:00</option>
+          <option>4:15</option>
+          <option>4:30</option>
+          <option>4:45</option>
+          <option>5:00</option>
+        </select>
+        Mins      
+      </div>
+    </div>
+
+
+    <div class="control-group">
+      <div class="controls">
+        <button type="submit" class="btn">Add Herd Watch</button>
+      </div>
+    </div>
+  </form>
+</div>
+
